Add functions that can get the total points completed

--- a/config.py.sample
+++ b/config.py.sample
@@ -2,3 +2,4 @@ base_url = "https://devopsguys.atlassian.net"
 board = "Pack 2"
 user = "USER"
 password = "PASSWORD"
+story_points_custom_field = "customfield_10004"
