--- a/index.html.template
+++ b/index.html.template
@@ -48,11 +48,19 @@ function handleVideo(stream) {
 function videoError(e) {
 }
 
-navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia || navigator.oGetUserMedia;
+var videoShouldShow = location.search.split('video=')[1] ? location.search.split('video=')[1] : 'true';
 
-if (navigator.getUserMedia) {
-	navigator.getUserMedia({video: true}, handleVideo, videoError);
+if(videoShouldShow == "false"){
+  $("#videoElement").hide();
+}else{
+  navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia || navigator.oGetUserMedia;
+
+  if (navigator.getUserMedia) {
+  	navigator.getUserMedia({video: true}, handleVideo, videoError);
+  }
 }
+
+
 
 </script>
 <script>
