--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -1,12 +1,32 @@
 {
     "dev": {
         "aws_region": "eu-west-1",
-        "app_function": "server.app", 
+        "app_function": "server.app",
         "s3_bucket": "zappa-dog-dailystandup-dev",
         "keep_warm": false,
         "parameter_depth": 2,
         "memory_size": 128,
-        "method_header_types": [ 
+        "profile_name": "daily-standup",
+        "method_header_types": [
+          "Content-Type",
+          "Location",
+          "Status",
+          "X-Frame-Options",
+          "Set-Cookie",
+          "Access-Control-Allow-Origin",
+          "Access-Control-Allow-Headers",
+          "Access-Control-Allow-Methods"
+      ]
+    },
+    "live": {
+        "aws_region": "eu-west-1",
+        "app_function": "server.app",
+        "s3_bucket": "zappa-dog-dailystandup-live",
+        "keep_warm": false,
+        "parameter_depth": 2,
+        "memory_size": 128,
+        "profile_name": "daily-standup",
+        "method_header_types": [
           "Content-Type",
           "Location",
           "Status",
