--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -6,6 +6,7 @@
         "keep_warm": false,
         "parameter_depth": 2,
         "memory_size": 128,
+        "exclude": ["awscli*","static"],
         "profile_name": "daily-standup",
         "method_header_types": [
           "Content-Type",
@@ -25,6 +26,7 @@
         "keep_warm": false,
         "parameter_depth": 2,
         "memory_size": 128,
+        "exclude": ["awscli*","static"],
         "profile_name": "daily-standup",
         "method_header_types": [
           "Content-Type",
