--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -6,7 +6,7 @@
         "keep_warm": false,
         "parameter_depth": 2,
         "memory_size": 128,
-        "exclude": ["awscli*","static"],
+        "exclude": ["awscli*","static","s3cmd*"],
         "profile_name": "daily-standup",
         "method_header_types": [
           "Content-Type",
@@ -26,7 +26,7 @@
         "keep_warm": false,
         "parameter_depth": 2,
         "memory_size": 128,
-        "exclude": ["awscli*","static"],
+        "exclude": ["awscli*","static","s3cmd*"],
         "profile_name": "daily-standup",
         "method_header_types": [
           "Content-Type",
