--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 jira==1.0.7
 lxml==3.6.4
 requests==2.10.0
-zappa
-flask
-pycrypto
-pyasn1 
-pyasn1_modules
+zappa=0.26.0
+flask=0.11.1
+pycrypto=2.6.1
+pyasn1=0.1.9
+pyasn1_modules=0.0.8
+retrying=1.3.3
