--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_ef58278c9052_key -iv $encrypted_ef58278c9052_iv
   -in config/config.py.enc -out config/config.py -d
 install: pip install -r requirements.txt
-script: if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./travis-deploy.sh; fi
+script: py.test && if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./travis-deploy.sh; fi
